--- a/client/assets/styles/layouts/default.scss
+++ b/client/assets/styles/layouts/default.scss
@@ -10,7 +10,6 @@
 body {
     position: relative;
     min-height: calc(100vh - 8rem);
-    margin-top: 8rem;
     font-size: 1rem;
     background: url('https://wallpapercave.com/wp/wp6938410.jpg');
 }
@@ -20,6 +19,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.app-container {
+    margin-top: 8rem;
 }
 
 .main-container {
