style(ui): new colors, some new content added to the page

--- a/client/assets/styles/components/footer.scss
+++ b/client/assets/styles/components/footer.scss
@@ -1,5 +1,5 @@
 .app-footer {    
-    background-color: #fff;
+    background-color: #e0f7fa;
     border-top: 1px solid #eaeaea;
     padding: 1rem 0;
     text-align: center;
@@ -12,6 +12,6 @@
     p {
         margin: 0;
         font-size: 0.875rem;
-        color: #777;
+        color: #00796b;
     }
 }
