--- a/client/assets/styles/layouts/default.scss
+++ b/client/assets/styles/layouts/default.scss
@@ -11,7 +11,7 @@ body {
     position: relative;
     min-height: calc(100vh - 8rem);
     font-size: 1rem;
-    background: url('https://wallpapercave.com/wp/wp6938410.jpg');
+    background: linear-gradient(to bottom right, #152935, #961107);
 }
 
 .app-container, .main-container {
