--- a/client/assets/styles/components/header.scss
+++ b/client/assets/styles/components/header.scss
@@ -1,5 +1,5 @@
 .app-header {
-    background: linear-gradient(135deg, #3399FF, #004488);
+    background: linear-gradient(135deg, #009688, #d32f2f);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 1.5rem 0.5rem;
     margin: 1.5rem;
@@ -76,7 +76,7 @@
             transition: color 0.3s ease, transform 0.2s ease-in-out;
 
             &:hover {
-                color: #cce7ff;
+                color: #ffcdd2;
                 transform: scale(1.05);
             }
         }
