--- a/app/assets/styles/pages/index.scss
+++ b/app/assets/styles/pages/index.scss
@@ -48,9 +48,12 @@ button {
 .response {
     margin-top: 1.25rem;
     padding: 0.5rem;
-    background: #d4edda;
     border-left: 3px solid #155724;
     border-radius: 5px;
+
+    p {
+        margin-top: 0.5rem;
+    }
 }
 
 .file-upload {
