--- a/app/assets/styles/pages/index.scss
+++ b/app/assets/styles/pages/index.scss
@@ -3,91 +3,140 @@
     margin: 1.25rem auto;
     padding: 1.25rem;
     color: white;
-}
 
-h2 {
-    text-align: center;
-    margin-bottom: 1.25rem;
-}
+    h2 {
+        text-align: center;
+        margin-bottom: 1.25rem;
+    }
 
-form {
-    display: flex;
-    flex-direction: column;
+    .file-upload {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 1rem;
+        border: 2px dashed #007bff;
+        border-radius: 0.5rem;
+        text-align: center;
+        cursor: pointer;
+        margin-bottom: 1rem;
 
-    label {
-        margin-top: 0.5rem;
+        .upload-label {
+            font-size: 1rem;
+            font-weight: bold;
+            color: #007bff;
+            cursor: pointer;
+        }
+    }
+
+    .data-form {
+        display: flex;
+        flex-direction: column;
+
+        .required-info {
+            text-align: center;
+            margin-bottom: 1rem;
+        }
 
         .required {
             color: red;
             font-weight: bold;
             margin-left: 0.5rem;
         }
+
+        label {
+            margin-top: 0.5rem;
+        }
+
+        input,
+        select,
+        textarea {
+            margin-top: 0.3125rem;
+            padding: 0.6rem;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            resize: vertical;
+        }
+
+        .privacy-checkbox {
+            margin-top: 1rem;
+            display: flex;
+            align-items: center;
+
+            input {
+                margin-top: 0;
+                height: 1rem;
+                width: 1rem;
+                margin-right: 0.5rem;
+            }
+
+            label {
+                margin-top: 0;
+            }
+
+            .privacy-link {
+                color: chocolate;
+                cursor: pointer;
+            }
+        }
+
+        .toggle-extra {
+            width: 100%;
+            margin-top: 1rem;
+            padding: 0.75rem;
+            border: none;
+            border-radius: 5px;
+            background-color: #28a745;
+            color: white;
+            cursor: pointer;
+            transition: background 0.3s;
+
+            &:hover {
+                background-color: #218838;
+            }
+        }
+
+        .buttons {
+            display: flex;
+            justify-content: space-between;
+            gap: 1rem;
+
+            button {
+                width: 100%;
+                margin-top: 1rem;
+                padding: 0.75rem;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: background 0.3s;
+
+                &.submit {
+                    background-color: #007bff;
+                    color: white;
+                }
+
+                &.export {
+                    background-color: yellow;
+                    color: black;
+                }
+
+                &.disabled {
+                    background-color: #ccc;
+                    color: white;
+                    cursor: not-allowed;
+                }
+            }
+        }
     }
 
-    input,
-    select,
-    textarea {
-        margin-top: 0.3125rem;
-        padding: 0.6rem;
-        border: 1px solid #ccc;
+    .response {
+        margin-top: 1.25rem;
+        padding: 0.5rem;
+        border-left: 3px solid #155724;
         border-radius: 5px;
-        resize: vertical;
-    }
-}
 
-button {
-    width: 100%;
-    margin-top: 1rem;
-    padding: 0.75rem;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background 0.3s;
-}
-
-.response {
-    margin-top: 1.25rem;
-    padding: 0.5rem;
-    border-left: 3px solid #155724;
-    border-radius: 5px;
-
-    p {
-        margin-top: 0.5rem;
-    }
-}
-
-.file-upload {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-    border: 2px dashed #007bff;
-    border-radius: 0.5rem;
-    text-align: center;
-    cursor: pointer;
-    margin-bottom: 1rem;
-
-    .upload-label {
-        font-size: 1rem;
-        font-weight: bold;
-        color: #007bff;
-        cursor: pointer;
-    }
-}
-
-.buttons {
-    display: flex;
-    justify-content: space-between;
-    gap: 1rem;
-
-    .submit {
-        background-color: #007bff;
-        color: white;
-    }
-
-    .export {
-        background-color: yellow;
-        color: black;
+        p {
+            margin-top: 0.5rem;
+        }
     }
 }
 
