--- a/app/assets/styles/pages/index.scss
+++ b/app/assets/styles/pages/index.scss
@@ -140,6 +140,25 @@
     }
 }
 
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.thinking-anim {
+    margin-top: 1rem;
+    animation: blink 1.5s infinite;
+}
+
 @media (max-width: 700px) {
     .form-card {
         width: 100%;
