build(app): added answers cancellation, to abort the http post request

--- a/app/assets/styles/components/userform.scss
+++ b/app/assets/styles/components/userform.scss
@@ -84,6 +84,11 @@
                 color: white;
             }
 
+            &.abort {
+                background-color: red;
+                color: white;
+            }
+
             &.export {
                 background-color: yellow;
                 color: black;
