--- a/landing/assets/styles/components/header.scss
+++ b/landing/assets/styles/components/header.scss
@@ -95,7 +95,7 @@
             position: absolute;
             top: 60px;
             right: 10px;
-            background: #004488;
+            background: linear-gradient(135deg, #009688, #d32f2f);
             padding: 1rem;
             border-radius: 10px;
             display: none;
