--- a/landing/assets/styles/layouts/default.scss
+++ b/landing/assets/styles/layouts/default.scss
@@ -23,12 +23,12 @@ body {
     width: 100%;
 }
 
-// position: fixed; miatt kell legyen
+// because of position: fixed;
 
 .app-container {
     margin-top: 8rem;
 }
 
 .main-container {
-    margin-bottom: 5rem;
+    margin-bottom: 6rem;
 }
