--- a/landing/assets/styles/pages/contact.scss
+++ b/landing/assets/styles/pages/contact.scss
@@ -1,16 +1,29 @@
 .contact-container {
-    max-width: 800px;
-    width: 50rem;
+    width: 60rem;
     margin: auto;
     padding: 1rem;
     background: #fbe9e7;
     border-radius: 1rem;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+
+    .contact-content {
+        padding: 1rem;
+    }
 }
 
-.contact-content {
-    padding: 1rem;
+.maps-form {
+    display: flex;
+    gap: 2rem;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+
+    iframe {
+        border-radius: 1rem;
+        width: 35rem;
+        height: 30rem;
+    }
 }
 
 .contact-info {
@@ -45,11 +58,6 @@
             color: #555;
             text-decoration: none;
         }
-
-        iframe {
-            width: 10rem;
-            height: 5rem;
-        }
     }
 }
 
@@ -59,6 +67,7 @@
     border-radius: 1rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: left;
+    height: 30rem;
 
     h2 {
         text-align: center;
@@ -99,6 +108,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        width: 100%;
+        gap: 5rem;
 
         button {
             background: #28A745;
@@ -127,6 +138,35 @@
                 height: auto;
             }
         }
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .contact-container {
+        width: 40rem;
+    }
+
+    .contact-info {
+        flex-direction: column;
+        gap: 1rem;
+
+        .info-card {
+            width: 100%;
+        }
+    }
+
+    .maps-form {
+        flex-direction: column;
+        align-items: center;
+
+        iframe {
+            width: 100%;
+            height: 20rem;
+        }
+    }
+
+    .contact-form {
+        width: 100%;
     }
 }
 
