build(app): fixed a bug with the red *

--- a/app/assets/styles/components/userform.scss
+++ b/app/assets/styles/components/userform.scss
@@ -7,7 +7,7 @@
         margin-bottom: 1rem;
     }
 
-    .required {
+    :deep(.required) {
         color: red;
         font-weight: bold;
     }
