--- a/landing/assets/styles/pages/contact.scss
+++ b/landing/assets/styles/pages/contact.scss
@@ -82,7 +82,7 @@
         .required {
             color: red;
             font-weight: bold;
-            margin-left: 0.5rem;
+            margin: 0 0.3rem;
         }
     }
 
