build(landing): added download page, made some fixes in styling, added download button to navbar

--- a/landing/assets/styles/pages/contact.scss
+++ b/landing/assets/styles/pages/contact.scss
@@ -48,7 +48,7 @@
         }
 
         h3 {
-            margin: 0.5rem 0;
+            margin-bottom: 0.5rem;
             font-size: 1.3rem;
         }
 
