--- a/landing/assets/styles/components/header.scss
+++ b/landing/assets/styles/components/header.scss
@@ -30,6 +30,7 @@
         font-weight: bold;
         color: white;
         text-decoration: none;
+        padding: 0.2rem 0;
     }
 
     .menu-toggle {
@@ -67,18 +68,31 @@
         list-style: none;
         display: flex;
         gap: 1.5rem;
+        align-items: center;
 
-        li a {
-            color: white;
-            font-size: 1.1rem;
-            text-decoration: none;
-            font-weight: 500;
-            transition: color 0.3s ease, transform 0.2s ease-in-out;
+        li {
+            a {
+                color: white;
+                font-size: 1.1rem;
+                text-decoration: none;
+                font-weight: 500;
+                transition: color 0.3s ease, transform 0.2s ease-in-out;
 
-            &:hover {
-                color: #ffcdd2;
-                transform: scale(1.05);
+                &:hover {
+                    color: #ffcdd2;
+                    transform: scale(1.05);
+                }
             }
+        }
+
+        .download-button {
+            background-color: #d32f2f;
+            color: #005f73;
+            padding: 0.5rem 1.5rem;
+            border-radius: 0.5rem;
+            text-decoration: none;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
         }
     }
 
@@ -86,7 +100,7 @@
         transform: translateY(0);
     }
 
-    @media (max-width: 500px) {
+    @media (max-width: 600px) {
         .menu-toggle {
             display: flex;
         }
