style(landing): added Terms of Service page, made some style changes, added video background

--- a/landing/assets/styles/components/footer.scss
+++ b/landing/assets/styles/components/footer.scss
@@ -16,10 +16,11 @@
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
 
-    .tos {
+    .terms {
         margin-left: 2rem;
         font-size: 1rem;
         color: #00796b;
+        text-decoration: none;
     }
 
     .copy {
