--- a/landing/assets/styles/layouts/default.scss
+++ b/landing/assets/styles/layouts/default.scss
@@ -2,7 +2,7 @@
 
 * {
     margin: 0;
-	padding: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
 }
@@ -16,7 +16,17 @@ body {
     background: linear-gradient(to bottom right, #152935, #961107);
 }
 
-.app-container, .main-container {
+.video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1;
+}
+
+.app-container,
+.main-container {
     display: flex;
     flex-direction: column;
     align-items: center;
