feat(landing): added download link to android app

--- a/landing/assets/styles/pages/download.scss
+++ b/landing/assets/styles/pages/download.scss
@@ -61,6 +61,10 @@
             font-size: 1.05rem;
         }
     }
+
+    .not-available {
+        cursor: not-allowed;
+    }
 }
 
 .mobile-apps {
