style(app): fixed birthday input width on android browsers

--- a/app/assets/styles/components/userform.scss
+++ b/app/assets/styles/components/userform.scss
@@ -25,6 +25,7 @@
         border: 1px solid #ccc;
         border-radius: 5px;
         resize: vertical;
+        width: 100%;
     }
 
     .privacy-checkbox {
