--- a/app/assets/styles/components/response.scss
+++ b/app/assets/styles/components/response.scss
@@ -1,12 +1,28 @@
 .response {
     margin-top: 1.25rem;
-    padding: 0.5rem;
-    border-left: 3px solid #155724;
     border-radius: 5px;
 
-    p {
-        margin-top: 0.5rem;
+    &-block {
+        padding: 0.5rem;
+        margin-top: 1rem;
         line-height: 1.5;
+    }
+
+    &-block.assistant {
+        border-left: 3px solid #155724;
+    }
+
+    &-block.user {
+        border-right: 3px solid #004085;
+        justify-content: right;
+        display: flex;
+        margin-left: auto;
+
+        .line {
+            span {
+                word-break: break-word;
+            }
+        }
     }
 
     .word {
