--- a/app/assets/styles/components/chatinterface.scss
+++ b/app/assets/styles/components/chatinterface.scss
@@ -25,13 +25,23 @@
         font-family: inherit;
     }
 
+    .download-button {
+        background: yellow;
+        color: black;
+        border: none;
+        padding: 0 0.5rem;
+        cursor: pointer;
+        font-weight: bold;
+        font-size: 1.5rem;
+    }
+
     .send-button {
         background: #2196f3;
         color: white;
         border: none;
-        padding: 0 1rem;
-        margin-left: 0.5rem;
+        padding: 0 0.5rem;
         cursor: pointer;
         font-weight: bold;
+        font-size: 1.5rem;
     }
 }
