--- a/app/assets/styles/components/chatinterface.scss
+++ b/app/assets/styles/components/chatinterface.scss
@@ -44,4 +44,10 @@
         font-weight: bold;
         font-size: 1.5rem;
     }
+
+    .disabled {
+        background-color: #ccc;
+        color: white;
+        cursor: not-allowed;
+    }
 }
