fix(app): fixed the chat input, if the user deletes the message, the textarea's height will be auto first; better markdown support; now the enteris not triggering false the function

--- a/app/assets/styles/components/response.scss
+++ b/app/assets/styles/components/response.scss
@@ -20,12 +20,12 @@
     }
 
     .line {
-        display: block;
         word-break: break-word;
     }
 
     .token {
         display: inline-block;
+        word-break: break-all;
     }
 
     .stream .token {
