--- a/app/assets/styles/components/header.scss
+++ b/app/assets/styles/components/header.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 10px 20px;
+    padding: 0.75rem 1.25rem;
     color: white;
 }
 
