--- a/app/assets/styles/components/response.scss
+++ b/app/assets/styles/components/response.scss
@@ -1,11 +1,13 @@
 .response {
     margin-top: 1.25rem;
     border-radius: 5px;
+    margin-bottom: 3rem;
 
     &-block {
         padding: 0.5rem;
         margin-top: 1rem;
         line-height: 1.5;
+        flex-wrap: wrap;
 
         h3 {
             margin-top: 0;
@@ -29,14 +31,15 @@
         }
     }
 
-    .line {
-        word-break: break-word;
-    }
-
-    &.stream :deep(.token) {
+    .stream :deep(.token) {
         display: inline-block;
         opacity: 0;
         animation: fadeIn 3s ease forwards;
+        word-break: break-all;
+    }
+
+    .block:last-child {
+        margin: 0;
     }
 
     &-anim {
