--- a/app/assets/styles/components/chatinterface.scss
+++ b/app/assets/styles/components/chatinterface.scss
@@ -16,7 +16,7 @@
 
 .scroll-btn {
     position: fixed;
-    right: 1rem;
+    right: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,9 +26,9 @@
     color: white;
     border: none;
     border-radius: 50%;
-    width: 2.5rem;
-    height: 2.5rem;
-    font-size: 2rem;
+    width: 2rem;
+    height: 2rem;
+    font-size: 1.5rem;
     cursor: pointer;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     transition: background-color 0.2s;
