--- a/landing/assets/styles/pages/about.scss
+++ b/landing/assets/styles/pages/about.scss
@@ -1,6 +1,6 @@
 .about {
     line-height: 1.6;
-    color: #004d40;;
+    color: #004d40;
     background: linear-gradient(to bottom, #e8f5e9, #ffebee);
     padding: 1.25rem;
     border-radius: 0.5rem;
@@ -15,11 +15,6 @@
 
     p {
         margin-bottom: 1rem;
-    }
-
-    ul, ol {
-        margin-left: 1.25rem;
-        list-style: inside square;
     }
 
     li {
