--- a/landing/assets/styles/pages/contact.scss
+++ b/landing/assets/styles/pages/contact.scss
@@ -48,7 +48,7 @@
         }
 
         h3 {
-            margin-bottom: 0.5rem;
+            margin: 0 0 0.5rem;
             font-size: 1.3rem;
         }
 
