--- a/landing/assets/styles/pages/index.scss
+++ b/landing/assets/styles/pages/index.scss
@@ -3,18 +3,25 @@
   margin: 0 auto;
   padding: 0 1rem;
   margin-bottom: -3rem;
+
+  h1,
+  h2,
+  h3,
+  p {
+    margin: 0;
+  }
 }
 
 .hero {
   background: linear-gradient(to bottom, #e8f5e9, #ffebee);
   color: #004d40;
-  padding: 4rem 1rem;
+  padding: 3rem;
   text-align: center;
   border-radius: 0.5rem;
 
   .hero-content {
     max-width: 800px;
-    margin: 0 auto;
+    margin-bottom: 0;
 
     h2 {
       font-size: 2.5rem;
@@ -42,11 +49,57 @@
   }
 }
 
-.features {
+.content-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.news-container {
+  flex: 1;
+  max-width: 45%;
+
+  h2 {
+    font-size: 2rem;
+    color: #004d40;
+    margin-bottom: 2rem;
+    text-align: left;
+  }
+
+  .news-item {
+    background: #e8f5e9;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 1.5rem;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+
+    h3 {
+      font-size: 1.5rem;
+      color: #004d40;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      font-size: 1rem;
+      color: #555;
+    }
+
+    &:hover {
+      transform: scale(1.05);
+      background-color: #b2dfdb;
+    }
+  }
+}
+
+.features-container {
+  flex: 1;
+  max-width: 45%;
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
-  margin: 3rem 0;
+  margin: 3rem 0 5rem;
 
   .feature-card {
     flex: 1 1 300px;
@@ -60,15 +113,29 @@
     h3 {
       font-size: 1.5rem;
       color: #005f73;
-      margin-bottom: 0.5rem;
     }
 
     p {
       color: #555;
+      margin-bottom: 0;
     }
 
     &:hover {
       transform: scale(1.05);
     }
+  }
+}
+
+@media (max-width: 1200px) {
+  .content-container {
+    margin: 2rem 0 0;
+    flex-direction: column-reverse;
+    gap: 2rem;
+  }
+
+  .news-container,
+  .features-container {
+    max-width: 100%;
+    margin: 0;
   }
 }
