--- a/app/assets/styles/components/settingsmodal.scss
+++ b/app/assets/styles/components/settingsmodal.scss
@@ -14,7 +14,7 @@
 .modal-content {
     background: #e0f7fa;
     color: #005f73;
-    padding: 2rem;
+    padding: 2rem 2rem 0.5rem;
     border-radius: 10px;
     text-align: center;
     max-width: 400px;
@@ -27,7 +27,6 @@
 
     p {
         font-size: 1rem;
-        margin-bottom: 1rem;
     }
 
     .close-button {
@@ -81,5 +80,10 @@
                 outline: none;
             }
         }
+    }
+
+    .version-info {
+        font-size: 0.85rem;
+        color: #666;
     }
 }
