--- a/app/assets/styles/components/healthlogform.scss
+++ b/app/assets/styles/components/healthlogform.scss
@@ -59,8 +59,8 @@
         color: white;
 
         &[type="button"] {
-            background: #e0e0e0;
-            color: #222;
+            background: #ff0000;
+            color: white;
         }
     }
 
